--- a/package.json
+++ b/package.json
@@ -15,13 +15,26 @@
     "type": "git",
     "url": "https://github.com/yieme/readme-middleware"
   },
-  "keywords": ["readme","middleware","express","connect"],
+  "keywords": [
+    "readme",
+    "middleware",
+    "express",
+    "connect",
+    "readme",
+    "showdown",
+    "homepage"
+  ],
   "author": "yieme",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/yieme/readme-middleware/issues"
   },
-  "dependencies": {   },
+  "dependencies": {
+    "hogan.js": "^3.0.2"
+  },
+  "serverDependencies": {
+    "note": "The following dependencies are used by server()"
+  },
   "devDependencies": {
     "object-attributes": "~0.1.1",
     "chai": "~1.10.0"
